[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=5]
action = "start_game"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -151.0
margin_right = 125.0
margin_bottom = 61.0
rect_rotation = 0.0802516
rect_scale = Vector2( 0.977758, 0.965537 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -90.0
margin_right = 317.0
margin_bottom = 59.0
rect_scale = Vector2( 0.72429, 0.826386 )
custom_fonts/font = SubResource( 2 )
text = "Dodge the creeps"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -290.0
margin_right = 90.0
margin_bottom = -201.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="HighScoreNumber" type="Label" parent="."]
margin_left = 360.0
margin_top = 16.0
margin_right = 480.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreWord" type="Label" parent="."]
margin_left = 360.0
margin_right = 480.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "Hight Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
